mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v1__test__snapshot_v1_settings.snap
---
source: mullvad-daemon/src/migrations/v1.rs
expression: v1
---
{
  "account_token": "1234",
  "allow_lan": true,
  "auto_connect": false,
  "block_when_disconnected": false,
  "relay_settings": {
    "normal": {
      "location": {
        "only": {
          "country": "se"
        }
      },
      "tunnel": {
        "only": {
          "openvpn": {
            "port": {
              "only": 53
            },
            "protocol": {
              "only": "udp"
            }
          }
        }
      }
    }
  },
  "tunnel_options": {
    "generic": {
      "enable_ipv6": false
    },
    "openvpn": {
      "mssfix": null
    },
    "wireguard": {
      "mtu": null
    }
  }
}
