mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v1__test__v1_to_v2_migration.snap
---
source: mullvad-daemon/src/migrations/v1.rs
expression: "serde_json::to_string_pretty(&settings).unwrap()"
---
{
  "account_token": "1234",
  "allow_lan": true,
  "auto_connect": false,
  "block_when_disconnected": false,
  "relay_settings": {
    "normal": {
      "location": {
        "only": {
          "country": "se"
        }
      },
      "openvpn_constraints": {
        "port": {
          "only": 53
        },
        "protocol": {
          "only": "udp"
        }
      },
      "tunnel_protocol": "any"
    }
  },
  "settings_version": 2,
  "show_beta_releases": false,
  "tunnel_options": {
    "generic": {
      "enable_ipv6": false
    },
    "openvpn": {
      "mssfix": null
    },
    "wireguard": {
      "mtu": null
    }
  }
}
